<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFAF0"
            android:text="@string/game_rule"
            android:textSize="14dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/model_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/model_one"/>

        <Button
            android:id="@+id/model_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/model_two"/>

        <Button
            android:id="@+id/model_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/model_three"/>

        <Button
            android:id="@+id/model_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/model_four"/>

    </LinearLayout>

</LinearLayout>